<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".aboutus">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="612dp"
        android:gravity="center"
        android:text="M.A.D"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="italic|bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:textSize="16sp"
        android:layout_marginLeft="40dp"
        android:text="@string/Sologan"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="141dp"
        android:background="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/forq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/forq"
        android:textSize="22sp"
        android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forq"
            android:text="@string/details"
            android:gravity="center"
            android:id="@+id/mail"
            />

    <TextView
        android:id="@+id/thanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="143dp"
        android:gravity="center"
        android:text="@string/thanking"
        android:textSize="22sp"
        android:textStyle="italic|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thanking"
        android:text="@string/thanks"
        android:textSize="16sp"
        android:gravity="center"

        />

</RelativeLayout>